Fix spacing between About and Work on desktop

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -8,7 +8,6 @@
   color: white;
   margin-top: 15rem;
   @include tablet {
-    height: 100vh;
     color: black;
     padding: 1rem;
   }
