--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -42,6 +42,7 @@
     &__menu {
       text-align: right;
       opacity: 0.3;
+      font-weight: 800;
 
       @include tablet {
         display: none;
